[gd_scene load_steps=10 format=4 uid="uid://dla1qlnfkh5cg"]

[ext_resource type="Texture2D" uid="uid://s6t1ktnavc13" path="res://Assets/Tilemap.png" id="1_5cjrv"]
[ext_resource type="Script" uid="uid://bax1euatov44g" path="res://Scripts/level1.gd" id="1_gjpho"]
[ext_resource type="Texture2D" uid="uid://d4j0ofaaehqdm" path="res://Assets/Flag.png" id="2_j0p05"]
[ext_resource type="PackedScene" uid="uid://nggnmoo5st8s" path="res://Scenes/Player.tscn" id="3_5nsto"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j0p05"]
texture = ExtResource("1_5cjrv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_2/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_3/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_5nsto"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 0
physics_layer_2/collision_layer = 4
physics_layer_2/collision_mask = 0
physics_layer_3/collision_layer = 8
physics_layer_3/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_j0p05")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5nsto"]
texture = ExtResource("2_j0p05")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_gjpho"]
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_5nsto")

[sub_resource type="GDScript" id="GDScript_j0p05"]
script/source = "extends TileMapLayer
"

[node name="Node2D" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_gjpho")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAAAAAABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAIAAAAAAADAAAAAAAJAAAAAAADAAAAAAAKAAAAAAADAAAAAAALAAAAAAADAAAAAAAMAAAAAAADAAAAAAANAAAAAAADAAAAAAAOAAAAAAADAAAAAAAPAAAAAAADAAAAAAAAAAEAAAADAAAAAAAAAAIAAAADAAAAAAAAAAMAAAADAAAAAAAAAAQAAAADAAAAAAAAAAUAAAADAAAAAAAAAAYAAAADAAAAAAAAAAcAAAADAAAAAAAAAAgAAAADAAAAAAAPAAgAAAADAAAAAAAPAAEAAAADAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAPAAcAAAADAAAAAAABAAEAAAADAAAAAAACAAEAAAADAAAAAAADAAEAAAADAAAAAAAEAAEAAAADAAAAAAAFAAEAAAADAAAAAAAGAAEAAAADAAAAAAAHAAEAAAADAAAAAAAIAAEAAAADAAAAAAAJAAEAAAADAAAAAAAKAAEAAAADAAAAAAALAAEAAAADAAAAAAAMAAEAAAADAAAAAAANAAEAAAADAAAAAAAOAAEAAAADAAAAAAAOAAIAAAADAAAAAAANAAIAAAADAAAAAAAMAAIAAAADAAAAAAALAAIAAAADAAAAAAAKAAIAAAADAAAAAAAJAAIAAAADAAAAAAAIAAIAAAADAAAAAAAHAAIAAAADAAAAAAAGAAIAAAADAAAAAAAFAAIAAAADAAAAAAAEAAIAAAADAAAAAAADAAIAAAADAAAAAAACAAIAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAACAAMAAAADAAAAAAADAAMAAAABAAAAAAAEAAMAAAABAAAAAAAFAAMAAAABAAAAAAAGAAMAAAABAAAAAAAHAAMAAAADAAAAAAAIAAMAAAADAAAAAAAJAAMAAAADAAAAAAAKAAMAAAADAAAAAAALAAMAAAADAAAAAAAMAAMAAAADAAAAAAANAAMAAAADAAAAAAAOAAMAAAADAAAAAAAAAAkAAAADAAAAAAAAAAoAAAADAAAAAAAAAAsAAAADAAAAAAABAAsAAAADAAAAAAACAAsAAAADAAAAAAADAAsAAAADAAAAAAAEAAsAAAADAAAAAAAFAAsAAAADAAAAAAAGAAsAAAADAAAAAAAHAAsAAAADAAAAAAAIAAsAAAADAAAAAAAJAAsAAAADAAAAAAAKAAsAAAADAAAAAAALAAsAAAADAAAAAAAMAAsAAAADAAAAAAANAAsAAAADAAAAAAAOAAsAAAADAAAAAAAPAAsAAAADAAAAAAAPAAkAAAADAAAAAAAPAAoAAAADAAAAAAABAAQAAAADAAAAAAACAAQAAAADAAAAAAAEAAQAAAADAAAAAAAFAAQAAAADAAAAAAAHAAQAAAADAAAAAAAIAAQAAAADAAAAAAAJAAQAAAADAAAAAAAKAAQAAAADAAAAAAALAAQAAAADAAAAAAAMAAQAAAADAAAAAAANAAQAAAADAAAAAAAOAAQAAAADAAAAAAAOAAUAAAADAAAAAAANAAUAAAADAAAAAAALAAUAAAADAAAAAAAKAAUAAAADAAAAAAAJAAUAAAADAAAAAAAIAAUAAAADAAAAAAAHAAUAAAADAAAAAAAGAAUAAAABAAAAAAAFAAUAAAABAAAAAAAEAAUAAAABAAAAAAADAAUAAAABAAAAAAACAAUAAAADAAAAAAABAAUAAAADAAAAAAABAAYAAAADAAAAAAACAAYAAAADAAAAAAADAAYAAAADAAAAAAAEAAYAAAADAAAAAAAIAAgAAAADAAAAAAAIAAcAAAADAAAAAAAIAAYAAAADAAAAAAAHAAYAAAADAAAAAAAGAAYAAAADAAAAAAAFAAYAAAADAAAAAAAFAAcAAAADAAAAAAAEAAcAAAADAAAAAAADAAcAAAADAAAAAAACAAcAAAADAAAAAAABAAcAAAADAAAAAAABAAgAAAADAAAAAAABAAkAAAADAAAAAAABAAoAAAADAAAAAAACAAoAAAADAAAAAAACAAkAAAADAAAAAAACAAgAAAADAAAAAAADAAgAAAADAAAAAAADAAkAAAADAAAAAAADAAoAAAADAAAAAAAEAAoAAAADAAAAAAAEAAkAAAADAAAAAAAEAAgAAAADAAAAAAAFAAgAAAADAAAAAAAFAAkAAAADAAAAAAAFAAoAAAADAAAAAAAGAAoAAAADAAAAAAAGAAkAAAADAAAAAAAGAAgAAAADAAAAAAAGAAcAAAADAAAAAAAHAAcAAAADAAAAAAAHAAgAAAADAAAAAAAHAAkAAAADAAAAAAAHAAoAAAADAAAAAAAIAAoAAAADAAAAAAAIAAkAAAADAAAAAAAJAAkAAAADAAAAAAAJAAgAAAADAAAAAAAJAAcAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAADAAAAAAAKAAcAAAADAAAAAAAKAAgAAAADAAAAAAAKAAkAAAADAAAAAAAKAAoAAAADAAAAAAAJAAoAAAADAAAAAAALAAoAAAADAAAAAAALAAkAAAADAAAAAAALAAgAAAADAAAAAAALAAcAAAADAAAAAAALAAYAAAADAAAAAAAMAAYAAAADAAAAAAAMAAcAAAADAAAAAAAMAAgAAAADAAAAAAAMAAkAAAADAAAAAAAMAAoAAAADAAAAAAANAAoAAAADAAAAAAANAAkAAAADAAAAAAANAAgAAAADAAAAAAANAAcAAAADAAAAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAOAAcAAAADAAAAAAAOAAgAAAADAAAAAAAOAAkAAAADAAAAAAAOAAoAAAADAAAAAAAMAAUAAAADAAAAAAADAAQAAAABAAAAAAAGAAQAAAABAAAAAAA=")
tile_set = SubResource("TileSet_5nsto")

[node name="PlayerFlag" type="TileMapLayer" parent="TileMapLayer"]
tile_map_data = PackedByteArray("AAAGAAUAAAABAAAAAAA=")
tile_set = SubResource("TileSet_gjpho")
script = SubResource("GDScript_j0p05")

[node name="Player" parent="." instance=ExtResource("3_5nsto")]
position = Vector2(56, 88)
scale = Vector2(0.125, 0.125)
tile_size = 16.0

[node name="Label" type="Label" parent="."]
offset_left = 261.33334
offset_top = 2.6666667
offset_right = 379.6667
offset_bottom = 101.0
theme_override_font_sizes/font_size = 12
text = "1. Move 3 times
2. You can move left
3. Do not reach flag"

[connection signal="blue_entered" from="Player" to="." method="_on_player_blue_entered"]
[connection signal="flag_entered" from="Player" to="." method="_on_player_flag_entered"]
[connection signal="inputed" from="Player" to="." method="_on_player_inputed"]
[connection signal="red_entered" from="Player" to="." method="_on_player_red_entered"]
